[project]
name = "un-law"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-generativeai>=0.8.5",
    "gunicorn>=23.0.0",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "waitress>=3.0.2",
]
